# kusto-synced

./: .gitattributes  .gitignore  .gitmodules  .goreleaser.yaml  Cargo.toml  LICENSE  README.md  go.mod  go.sum  main.go
.github/: ci.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
cmd/: build.go  config.go  root.go  run.go  sync.go
doc/: contributing.md  env-var.md
docs/: algo.md  contributing.md  faq.md
examples/: README.md
examples/basic/: README.md  find.csl  log.csl
examples/directories/: README.md
examples/directories/functions/dir1/: limit.csl
examples/directories/functions/dir2/: find.csl
examples/github/: README.md  ci.yml
examples/testdata/tables/: Metrics.csl
internal/ksd/: build.go  build_test.go  client.go  parse.go  parse_test.go  run.go  sync.go
internal/ksd/.snapshots/: .gitattributes  fn-oneline.csl  fn-regular.csl  fn-simple-spaced.csl  fn-simple.csl  tb-nospace.csl  tb-oneline.csl  tb-regular.csl
internal/ksd/testdata/buildAll/inputs/Tables/TopLevel/: Trace.csl
internal/ksd/testdata/buildAll/outputs/Functions/TopLevel/: TopNTrace.csl
internal/ksd/testdata/functions/: oneline.csl  regular.csl  simple-spaced.csl  simple.csl
internal/ksd/testdata/tables/: nospace.csl  oneline.csl  regular.csl
src/: lib.rs  main.rs  mb.rs  project.code-workspace
test/: build_test.go  exec.go  run_test.go  sync_test.go  util.go
test/testdata/functions/: HourlyMetric.csl
test/testdata/scripts/: show.csl
test/testdata/src/functions/trace/: TopNTrace.csl
test/testdata/src/tables/: Metric.csl  Trace.csl
(+4 files in other folders)
