[package]
name = "kusto-sync-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.8", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.7.1"
walkdir = "2.3.2"
